<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_connection"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_sendorldr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/led_label"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintRight_toLeftOf="@+id/buttonOn"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/buttonOn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_on"
        app:layout_constraintLeft_toRightOf="@+id/tv_sendorldr"
        app:layout_constraintRight_toLeftOf="@+id/buttonOff"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/buttonOff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_off"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonOn"
        app:layout_constraintLeft_toRightOf="@+id/buttonOn"
        app:layout_constraintRight_toLeftOf="@+id/sensorView"
        tools:layout_constraintBaseline_creator="1" />

    <TextView
        android:id="@+id/sensorView0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Estado"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonOff"
        app:layout_constraintLeft_toRightOf="@+id/buttonOff"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBaseline_creator="1" />

    <LinearLayout
        android:id="@+id/lineaSeparador"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_gravity="center_vertical"
        android:background="@color/linearSeparador"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/buttonOn"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="12dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"></LinearLayout>

    <TextView
        android:id="@+id/sensorView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:text="@string/sensors"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sendorldr"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/data_showed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:text="@string/overview_label"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lineaSeparador"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DHT11_interior"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/data_showed" />

    <TextView
        android:id="@+id/txtString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="59dp"
        android:layout_marginLeft="61dp"
        android:layout_marginRight="59dp"
        android:layout_marginStart="61dp"
        android:text="Dato1:??"
        app:layout_constraintBottom_toTopOf="@+id/temperature_i_seekBar"
        app:layout_constraintLeft_toRightOf="@+id/textView11"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <SeekBar
        android:id="@+id/temperature_i_seekBar"
        android:layout_width="0dp"
        android:layout_height="22dp"
        android:layout_marginEnd="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="10dp"
        android:max="100"
        android:progress="0"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/DHT11_interior_h_i"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temperature_i_seekBar"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/sensorView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Dato2: ??"
        app:layout_constraintHorizontal_bias="0.608"
        app:layout_constraintLeft_toRightOf="@+id/textView16"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temperature_i_seekBar"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/DHT11_exterior"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        android:id="@+id/sensorView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:layout_marginEnd="55dp"
        android:layout_marginLeft="57dp"
        android:layout_marginRight="55dp"
        android:layout_marginStart="57dp"
        android:text="Dato3: ??"
        app:layout_constraintBottom_toTopOf="@+id/temperature_e_seekBar"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintLeft_toRightOf="@+id/textView18"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <SeekBar
        android:id="@+id/temperature_e_seekBar"
        android:layout_width="0dp"
        android:layout_height="21dp"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="29dp"
        android:max="100"
        app:layout_constraintBottom_toBottomOf="@+id/textView20"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView18"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/DHT11_interior_h_e"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="16dp"
        android:layout_marginTop="46dp"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/sensorView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="Dato4: ??"
        app:layout_constraintHorizontal_bias="0.594"
        app:layout_constraintLeft_toRightOf="@+id/textView20"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/temperature_e_seekBar" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/fan_controller"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="16dp"
        android:layout_marginTop="13dp"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <TextView
        android:id="@+id/sensorView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="Dato5: ??"
        app:layout_constraintHorizontal_bias="0.716"
        app:layout_constraintLeft_toRightOf="@+id/textView22"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="13dp"
        app:layout_constraintTop_toBottomOf="@+id/sensorView4" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="13dp"
        android:text="@string/position"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView22"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/sensorView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Dato6: ??"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/textView24"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.725"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/sensorView5" />

    <Button
        android:id="@+id/button_modify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_modify"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/button_back"
        app:layout_constraintTop_toTopOf="@+id/button_back"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_return"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/sensorView6"
        app:layout_constraintLeft_toRightOf="@+id/button_modify"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="5dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintHorizontal_bias="0.903" />

</android.support.constraint.ConstraintLayout>